tests/integration/features/options/options_per_project/validations/03_features_not_array/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail
CHECK: error: strictdoc.toml: 'feature' parameter must be an array: 'broken'.
